[gd_scene load_steps=12 format=3 uid="uid://dv6l6oirocx8c"]

[ext_resource type="FontFile" uid="uid://c3dwdsa6ke5fi" path="res://fonts/ttf/IBMPlexMono-Regular.ttf" id="1_26y8w"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_gpxjs"]
[ext_resource type="Script" path="res://Scripts/Input.gd" id="1_sd4wn"]
[ext_resource type="PackedScene" uid="uid://3lwuodij5n6d" path="res://scenes/Room.tscn" id="3_ob04f"]
[ext_resource type="Script" path="res://Scripts/CommandProcessor.gd" id="4_fut5f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56d4h"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16uqj"]
bg_color = Color(0.243137, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1cq2"]
bg_color = Color(0.376471, 0.376471, 0.376471, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mtf04"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7dt6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fba15"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpxjs")

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource("4_fut5f")

[node name="RoomManager" type="Node" parent="."]

[node name="HouseRoom" parent="RoomManager" instance=ExtResource("3_ob04f")]
offset_left = 44.0
offset_top = -370.0
offset_right = 294.0
offset_bottom = -170.0
room_name = "a house"
room_description = "a random house that you don't recognize."

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_56d4h")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_16uqj")

[node name="Scroll" type="ScrollContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="HistoryRows" type="VBoxContainer" parent="Background/MarginContainer/Rows/GameInfo/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_s1cq2")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_26y8w")
theme_override_font_sizes/font_size = 28
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_26y8w")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_mtf04")
theme_override_styles/focus = SubResource("StyleBoxEmpty_c7dt6")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_fba15")
max_length = 48
script = ExtResource("1_sd4wn")

[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
